render indoor location